[gd_scene load_steps=5 format=3 uid="uid://bwo2g8rne8oaf"]

[ext_resource type="Script" path="res://objects/product_building.gd" id="1_g07kb"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nkpru"]
animations = [{
"frames": [],
"loop": true,
"name": &"destroyed",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"full_stock",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"production",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0eqrx"]
size = Vector2(149, 91)

[sub_resource type="CircleShape2D" id="CircleShape2D_itcia"]
radius = 26.0768

[node name="ProductionBuilding" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_nkpru")
animation = &"production"
script = ExtResource("1_g07kb")

[node name="OutputTimer" type="Timer" parent="."]

[node name="GatherTimer" type="Timer" parent="."]

[node name="Storage" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, -13)
shape = SubResource("RectangleShape2D_0eqrx")

[node name="GatherZone" type="Area2D" parent="."]
collision_layer = 16

[node name="GatherZoneShape" type="CollisionShape2D" parent="GatherZone"]
position = Vector2(-2, 33)
shape = SubResource("CircleShape2D_itcia")

[node name="CollectSound" type="AudioStreamPlayer2D" parent="."]
volume_db = 10.0

[connection signal="timeout" from="OutputTimer" to="." method="_on_output_timer_timeout"]
[connection signal="timeout" from="GatherTimer" to="." method="_on_gather_timer_timeout"]
[connection signal="body_entered" from="GatherZone" to="." method="_on_gather_zone_body_entered"]
[connection signal="body_exited" from="GatherZone" to="." method="_on_gather_zone_body_exited"]
